--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -15,11 +15,18 @@ jobs:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.4'
+    - uses: actions/setup-node@v5
+      with:
+        node-version: 22
     - uses: actions/checkout@v4
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
+    - name: Install composer packages
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+    - name: Install npm packages
+      run: npm i
+    - name: Vite build
+      run: npm run build
     - name: Generate key
       run: php artisan key:generate
     - name: Check translations
