--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/laravel",
+    "name": "aryxs3m/repflux-app",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "description": "Repflux helps with logging your sets, measuring yourself and keeping track of your progression.",
+    "keywords": ["repflux", "fitness", "workout-tracker", "gymtracker", "health"],
     "license": "MIT",
     "require": {
         "php": "^8.2",
