APP-88: added Playwright E2E tests

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,11 @@ Thumbs.db
 frankenphp
 frankenphp-worker.php
 /cov/
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
