--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
-    "$schema": "https://json.schemastore.org/package.json",
-    "name": "@aryxs3m/repflux-app",
-    "description": "Repflux helps with logging your sets, measuring yourself and keeping track of your progression.",
-    "keywords": ["repflux", "fitness", "workout-tracker", "gymtracker", "health"],
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "vite build",
-        "dev": "vite"
-    },
-    "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.11.0",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^7.0.4"
-    },
-    "dependencies": {
-        "@fullcalendar/core": "^6.1.19",
-        "@fullcalendar/daygrid": "^6.1.19",
-        "@fullcalendar/list": "^6.1.19",
-        "@fullcalendar/timegrid": "^6.1.19",
-        "sass-embedded": "^1.92.1"
-    }
+  "$schema": "https://json.schemastore.org/package.json",
+  "name": "@aryxs3m/repflux-app",
+  "description": "Repflux helps with logging your sets, measuring yourself and keeping track of your progression.",
+  "keywords": [
+    "repflux",
+    "fitness",
+    "workout-tracker",
+    "gymtracker",
+    "health"
+  ],
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.55.1",
+    "@tailwindcss/vite": "^4.0.0",
+    "@types/node": "^24.5.2",
+    "axios": "^1.11.0",
+    "concurrently": "^9.0.1",
+    "laravel-vite-plugin": "^2.0.0",
+    "tailwindcss": "^4.0.0",
+    "vite": "^7.0.4"
+  },
+  "dependencies": {
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/list": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
+    "sass-embedded": "^1.92.1"
+  }
 }
