--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,11 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+APP_DEMO=false
+#APP_DEMO_EMAIL=demo@repflux.app
+#APP_DEMO_PASSWORD=
+
+#SENTRY_LARAVEL_DSN=
+#SENTRY_SEND_DEFAULT_PII=
+#SENTRY_TRACES_SAMPLE_RATE=
