--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.12",
         "laravel/tinker": "^2.10.1",
+        "leandrocfe/filament-apex-charts": "^4.0",
         "sentry/sentry-laravel": "^4.16",
         "silviolleite/laravelpwa": "^2.0"
     },
@@ -80,6 +81,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "beta",
     "prefer-stable": true
 }
