--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
     "require": {
         "php": "^8.2",
         "ext-pdo": "*",
+        "dutchcodingcompany/filament-socialite": "^3.0",
         "filament/filament": "^4.0",
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.12",
         "laravel/tinker": "^2.10.1",
         "leandrocfe/filament-apex-charts": "^4.0",
+        "owenvoke/blade-fontawesome": "^2.9",
         "sentry/sentry-laravel": "^4.16",
         "silviolleite/laravelpwa": "^2.0"
     },
