--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/octane": "^2.12",
         "laravel/tinker": "^2.10.1",
         "leandrocfe/filament-apex-charts": "^4.0",
+        "martinbean/socialite-discord-provider": "^1.2",
         "owenvoke/blade-fontawesome": "^2.9",
         "sentry/sentry-laravel": "^4.16",
         "silviolleite/laravelpwa": "^2.0"
