--- a/.github/workflows/pest.yml
+++ b/.github/workflows/pest.yml
@@ -10,34 +10,45 @@ jobs:
   dependencies:
     runs-on: ubuntu-latest
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.4'
-    - uses: actions/setup-node@v5
-      with:
-        node-version: 22
-    - uses: actions/checkout@v4
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install composer packages
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Install npm packages
-      run: npm i
-    - name: Vite build
-      run: npm run build
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
+      - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+        with:
+          php-version: '8.4'
+      - uses: actions/setup-node@v5
+        with:
+          node-version: 22
+      - uses: actions/checkout@v4
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      - name: Install composer packages
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      - name: Install npm packages
+        run: npm i
+      - name: Vite build
+        run: npm run build
+      - name: Generate key
+        run: php artisan key:generate
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
+      - name: Create Database
+        run: |
+          mkdir -p database
+          touch database/database.sqlite
+      - uses: actions/upload-artifact@v4
+        with:
+          name: 'repflux-test'
+          path: './'
+          if-no-files-found: error
+          retention-days: 1
+          overwrite: true
+
   profanity-tests:
     runs-on: ubuntu-latest
     needs:
       - dependencies
     steps:
+      - uses: actions/download-artifact@v5
+        with:
+          name: 'repflux-test'
       - name: Check for profanity
         run: ./vendor/bin/pest --profanity
   app-tests:
@@ -45,6 +56,9 @@ jobs:
     needs:
       - dependencies
     steps:
+      - uses: actions/download-artifact@v5
+        with:
+          name: 'repflux-test'
       - name: Unit, Feature, Architecture tests
         env:
           DB_CONNECTION: sqlite
@@ -55,6 +69,9 @@ jobs:
     needs:
       - dependencies
     steps:
+      - uses: actions/download-artifact@v5
+        with:
+          name: 'repflux-test'
       - name: Smoke tests
         env:
           DB_CONNECTION: sqlite
@@ -65,6 +82,9 @@ jobs:
     needs:
       - dependencies
     steps:
+      - uses: actions/download-artifact@v5
+        with:
+          name: 'repflux-test'
       - name: Smoke tests
         env:
           DB_CONNECTION: sqlite
