--- a/.github/workflows/pest.yml
+++ b/.github/workflows/pest.yml
@@ -69,34 +69,45 @@ jobs:
         env:
           DB_CONNECTION: sqlite
           DB_DATABASE: database/database.sqlite
-        run: ./vendor/bin/pest --exclude-group=smoke --exclude-group=stress --parallel
-  smoke-tests:
-    runs-on: ubuntu-latest
-    needs:
-      - dependencies
-    steps:
-      - uses: actions/download-artifact@v5
-        with:
-          name: 'repflux-test'
-      - name: 'Extract files'
-        run: tar -xvf repflux-test.tar
-      - name: Smoke tests
-        env:
-          DB_CONNECTION: sqlite
-          DB_DATABASE: database/database.sqlite
-        run: ./vendor/bin/pest --group=smoke
-  stress-tests:
-    runs-on: ubuntu-latest
-    needs:
-      - dependencies
-    steps:
-      - uses: actions/download-artifact@v5
-        with:
-          name: 'repflux-test'
-      - name: 'Extract files'
-        run: tar -xvf repflux-test.tar
-      - name: Stress tests
-        env:
-          DB_CONNECTION: sqlite
-          DB_DATABASE: database/database.sqlite
-        run: ./vendor/bin/pest --group=stress
+        run: ./vendor/bin/pest --exclude-group=smoke --exclude-group=stress
+#  smoke-tests:
+#    runs-on: ubuntu-latest
+#    needs:
+#      - dependencies
+#    steps:
+#      - uses: actions/download-artifact@v5
+#        with:
+#          name: 'repflux-test'
+#      - name: 'Extract files'
+#        run: tar -xvf repflux-test.tar
+#      - uses: actions/setup-node@v5
+#        with:
+#          node-version: 22
+#      - name: Install playwright
+#        run: npm install playwright@latest && npx playwright install
+#      - name: Smoke tests
+#        env:
+#          DB_CONNECTION: sqlite
+#          DB_DATABASE: database/database.sqlite
+#        run: ./vendor/bin/pest --group=smoke
+#  stress-tests:
+#    runs-on: ubuntu-latest
+#    needs:
+#      - dependencies
+#    steps:
+#      - uses: actions/download-artifact@v5
+#        with:
+#          name: 'repflux-test'
+#      - name: 'Extract files'
+#        run: tar -xvf repflux-test.tar
+#      - uses: actions/setup-node@v5
+#        with:
+#          node-version: 22
+#      - name: Install playwright
+#        run: npm install playwright@latest && npx playwright install
+#      - name: Stress tests
+#        env:
+#          DB_CONNECTION: sqlite
+#          DB_DATABASE: database/database.sqlite
+#        run: ./vendor/bin/pest --group=stress
+#
