--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "ext-pdo": "*",
         "dutchcodingcompany/filament-socialite": "^3.0",
         "filament/filament": "^4.0",
+        "flowframe/laravel-trend": "^0.4.0",
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.12",
         "laravel/tinker": "^2.10.1",
